--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,10 +1,16 @@
-@import "~bootstrap/scss/bootstrap";
 @import "variables.scss";
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@600&display=swap');
 
+:root {
+    box-sizing: border-box;
+}
 body {
-    background-color: lightgray;
+    background-image: url("../images/banner.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
 }
 
 p,
@@ -27,3 +33,6 @@ h5
     font-family: 'Signika Negative', sans-serif;
 }
 
+.button-style {
+    background-color: rgba(180,180,180,0.8);
+}
