take off empty id attribute

--- a/templates/includes/_navBar.html.twig
+++ b/templates/includes/_navBar.html.twig
@@ -28,7 +28,7 @@
             </button>
         </div>
         <div class="list-section collapse navbar-collapse w-100" id="navbarNav">
-            <ul id="" class="list container-lg justify-content-lg-around align-items-center navbar-nav w-100">
+            <ul class="list container-lg justify-content-lg-around align-items-center navbar-nav w-100">
                     <li class="nav-item ">
                         <a class="nav-link "  href="#">Compétences</a>
                     </li>
