--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,7 +1,9 @@
-{% include 'base.html.twig' %}
+{% include 'homeBase.html.twig' %}
 
 {% block body %}
     <h1>Hello !</h1>
     <p class="text-primary">World !</p>
     <h2>Test</h2>
 {% endblock %}
+
+
