--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -5,13 +5,13 @@
 :root {
     box-sizing: border-box;
 }
-body {
+/*body {
     background-image: url("../images/banner.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
-}
+}*/
 
 p,
 a,
