--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -1,17 +1,11 @@
 :root {
-  --mulled-wine: #5a4371;
-  --cashmere: #e5b19c;
-  --port-gore: #261d43;
-  --cinder: #170e18;
-  --bouquet: #a57e99;
-  --strikemaster: #946682;
-  --deluge: #8a69a4;
-  --del-rio: #b49c9c;
-  --contessa: #bc6475;
-  --sandy-brown: #ef955c;
+  --first-color: #E1E6FA;
+  --second-color: #C4D7ED;
+  --third-color: #ABC8E2;
+  --fourth-color: #375D81;
+  --fifth-color: #183152;
+  --spacing: 8px;
 }
-
-
 
 $spacing: 8px;
 $spacing2: $spacing * 2;
