--- a/templates/realisation/index.html.twig
+++ b/templates/realisation/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'adminBase.html.twig' %}
 
 {% block stylesheets %}
     {{ encore_entry_link_tags('index') }}
