--- a/templates/includes/_navBar_Admin.html.twig
+++ b/templates/includes/_navBar_Admin.html.twig
@@ -26,7 +26,7 @@
                     </li>
                     <li class="nav-item nav-section section-seprator">
                         
-                        <a class="nav-link section-nav"  href="#">Compétence</a>
+                        <a class="nav-link section-nav"  href="{{ path('competence_index')}}">Compétence</a>
                     </li>
                     <li class="nav-item nav-section">
                         <a class="nav-link section-nav"  href="#">Expérience</a>
