--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,6 +24,10 @@
         {% block body %}
         {% endblock %}
 
+        {% block form %}
+    
+        {% endblock %}
+
         {% block footer %}
 
         {% endblock %}
