--- a/templates/competence/edit.html.twig
+++ b/templates/competence/edit.html.twig
@@ -1,13 +1,17 @@
-{% extends 'base.html.twig' %}
+{% extends 'adminBase.html.twig' %}
+
+{% block stylesheets %}
+    {{ encore_entry_link_tags('form') }}
+{% endblock %}
 
 {% block title %}Edit Competence{% endblock %}
 
 {% block body %}
-    <h1>Edit Competence</h1>
 
-    {{ include('competence/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('competence/_form.html.twig', {'header_label':'Mise à jour de la compétence'}, {'button_label': 'Update'}) }}
 
-    <a href="{{ path('competence_index') }}">back to list</a>
-
-    {{ include('competence/_delete_form.html.twig') }}
+    <div class="contents-control-user">
+        <a class="link-back" href="{{ path('competence_index') }}">back to list</a>
+    </div>
+    
 {% endblock %}
